--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,6 +1,6 @@
 back_office:
     resource: "@BackOfficeBundle/Resources/config/routing.yml"
-    prefix:   /
+    prefix:   /adminbo
 
 front_office:
     resource: "@FrontOfficeBundle/Resources/config/routing.yml"
