--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+back_office_voiture:
+    resource: "@BackOfficeBundle/Controller/VoitureController.php"
+    type:     annotation
+
 back_office:
     resource: "@BackOfficeBundle/Resources/config/routing.yml"
     prefix:   /adminbo
