--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+back_office_ville:
+    resource: "@BackOfficeBundle/Controller/VilleController.php"
+    type:     annotation
+
 back_office_voiture:
     resource: "@BackOfficeBundle/Controller/VoitureController.php"
     type:     annotation
