--- a/src/BackOfficeBundle/Resources/config/routing.yml
+++ b/src/BackOfficeBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 back_office_homepage:
     path:     /
     defaults: { _controller: BackOfficeBundle:Default:index }
+
+ville_homepage:
+    path:     /ville
+    defaults: { _controller: BackOfficeBundle:Ville:index }
