--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+back_office_internaute:
+    resource: "@BackOfficeBundle/Controller/internauteController.php"
+    type:     annotation
+
 back_office_ville:
     resource: "@BackOfficeBundle/Controller/VilleController.php"
     prefix:   /adminbo
