--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+web_service:
+    resource: "@WebServiceBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 back_office_internaute:
     resource: "@BackOfficeBundle/Controller/internauteController.php"
     prefix:   /adminbo
