--- a/src/WebServiceBundle/Resources/config/routing.yml
+++ b/src/WebServiceBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 web_service_homepage:
     path:     /
     defaults: { _controller: WebServiceBundle:Default:index }
+
+web_service_search_homepage:
+    path:     /{search}
+    defaults: { _controller: WebServiceBundle:Default:search }
