--- a/src/WebServiceBundle/Resources/config/routing.yml
+++ b/src/WebServiceBundle/Resources/config/routing.yml
@@ -5,3 +5,7 @@ web_service_homepage:
 web_service_search_homepage:
     path:     /{search}
     defaults: { _controller: WebServiceBundle:Default:search }
+
+web_service_details_homepage:
+    path:     /details/{id}
+    defaults: { _controller: WebServiceBundle:Default:details }
